--- a/src/apps/bigdata/control/edit/edit.component.html
+++ b/src/apps/bigdata/control/edit/edit.component.html
@@ -1,5 +1,5 @@
 <div class="brand-head">
-    <h1 class="brand-head-til" att.data-text="数据">{{ titleObj.title}}</h1>
+    <h1 class="brand-head-til" att.data-text="数据">{{titleObj.title}}</h1>
     <h3 class="brand-head-time">{{tiem}}</h3>
 </div>
 
@@ -7,7 +7,7 @@
     <p class="brand-til-big">基础设置</p>
     <div class="brand-til-set mt10">
         <label class="c-blue">看板标题：</label>
-        <input type="text" class="input brand-til-set-input" placeholder="智店宝数据罗盘" [(ngModel)]="setTitle" />
+        <input type="text" class="input brand-til-set-input"   [(ngModel)]="setTitle" />
         <label class="ml10 c-white-o">*只对本机生效，不会影响其他看板</label>
     </div>
     <p class="brand-til-big mt30">数据版块设置</p>
